log/build_2022-08-07_19-47-53/robot_control/stderr.log
  File "/home/louis/dev_robot/install/robot_control/lib/python3.8/site-packages/robot_control/Control_V3.py", line 73
    match motor_ctrl_state:
          ^
SyntaxError: invalid syntax

